crates/parser/src/snapshots/bnb_parser__tests__parse_comment-2.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [
            Place {
                name: "AffordanceComment",
                description: [],
                items: [
                    Affordance(
                        Affordance {
                            name: "Not Here",
                            description: [],
                            connections: [],
                            level: 0,
                        },
                    ),
                    Affordance(
                        Affordance {
                            name: "But Here",
                            description: [
                                "An affordance comment.",
                            ],
                            connections: [],
                            level: 0,
                        },
                    ),
                    Affordance(
                        Affordance {
                            name: "And No Longer Here",
                            description: [],
                            connections: [],
                            level: 0,
                        },
                    ),
                ],
                position: None,
                sketch: None,
            },
        ],
        components: [],
    },
)
