crates/parser/src/snapshots/bnb_parser__tests__parse_comment-3.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [
            Place {
                name: "MultipleComments",
                description: [
                    "Both a place comment,",
                ],
                affordances: [
                    Affordance {
                        name: "One",
                        description: [
                            "and",
                        ],
                        connections: [],
                        level: 0,
                    },
                    Affordance {
                        name: "Two",
                        description: [
                            "affordance",
                        ],
                        connections: [],
                        level: 2,
                    },
                    Affordance {
                        name: "Three",
                        description: [
                            "comments!",
                        ],
                        connections: [],
                        level: 3,
                    },
                ],
                component_references: [],
                position: None,
                sketch: None,
            },
        ],
        components: [],
    },
)
