crates/parser/src/snapshots/bnb_parser__tests__parse_comment-5.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [
            Place {
                name: "WhiteSpace",
                description: [
                    "Starting whitespace is",
                    "optional.",
                    "  and more than one whitespace",
                    " is preserved.",
                    "  As is trailing whitespace  ",
                ],
                items: [
                    Affordance(
                        Affordance {
                            name: "Affordance",
                            description: [
                                " > Here as well < ",
                            ],
                            connections: [],
                            level: 0,
                        },
                    ),
                ],
                position: None,
                sketch: None,
            },
        ],
        components: [],
    },
)
