crates/parser/src/snapshots/bnb_parser__tests__parse_comment-7.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [
            Place {
                name: "MultiplePlaces",
                description: [],
                items: [
                    Affordance(
                        Affordance {
                            name: "Affordance",
                            description: [],
                            connections: [],
                            level: 0,
                        },
                    ),
                ],
                position: None,
                sketch: None,
            },
            Place {
                name: "Works",
                description: [],
                items: [
                    Affordance(
                        Affordance {
                            name: "Affordance",
                            description: [
                                "Unless three `/`'s are used!",
                            ],
                            connections: [],
                            level: 0,
                        },
                    ),
                ],
                position: None,
                sketch: None,
            },
        ],
        components: [],
    },
)
