crates/parser/src/snapshots/bnb_parser__tests__parse_comment.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [
            Place {
                name: "PlaceComment",
                description: [
                    "A comment as a description for the place.",
                ],
                items: [],
                position: None,
                sketch: None,
            },
        ],
        components: [],
    },
)
