crates/parser/src/snapshots/bnb_parser__tests__parse_level-2.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [
            Place {
                name: "OneLevel",
                description: [],
                affordances: [
                    Affordance {
                        name: "One Level",
                        description: [],
                        connections: [],
                        level: 1,
                    },
                ],
                component_references: [],
                position: None,
                sketch: None,
            },
        ],
        components: [],
    },
)
