crates/parser/src/snapshots/bnb_parser__tests__parse_level-5.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [],
        components: [
            Component(
                Place {
                    name: "MixedLevels",
                    description: [],
                    items: [
                        Affordance(
                            Affordance {
                                name: "One Level",
                                description: [],
                                connections: [],
                                level: 1,
                            },
                        ),
                        Affordance(
                            Affordance {
                                name: "Two Level",
                                description: [],
                                connections: [],
                                level: 2,
                            },
                        ),
                        Affordance(
                            Affordance {
                                name: "Three Level",
                                description: [],
                                connections: [],
                                level: 3,
                            },
                        ),
                        Affordance(
                            Affordance {
                                name: "Four Level",
                                description: [],
                                connections: [],
                                level: 1,
                            },
                        ),
                        Affordance(
                            Affordance {
                                name: "Five Level",
                                description: [],
                                connections: [],
                                level: 0,
                            },
                        ),
                    ],
                    position: None,
                    sketch: None,
                },
            ),
        ],
    },
)
