crates/parser/src/snapshots/bnb_parser__tests__parse_level.snap
---
source: crates/parser/src/lib.rs
expression: parse(case)
---
Ok(
    Breadboard {
        places: [
            Place {
                name: "NoLevel",
                description: [],
                items: [
                    Affordance(
                        Affordance {
                            name: "No Level",
                            description: [],
                            connections: [],
                            level: 0,
                        },
                    ),
                ],
                position: None,
                sketch: None,
            },
        ],
        components: [],
    },
)
